syntax = "proto3";

package pb;

option go_package= "github.com/EdoRguez/business-manager/auth-svc/pb";

service UserService{
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest{
  int64 comany_id = 1;
  int64 role_id = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse{
  int64 id = 1;
  int64 status = 2;
  string error = 3;
}

message GetUserRequest{
  int64 id = 1;
}

message GetUserResponse{
  int64 id = 1;
  int64 comany_id = 2;
  int64 role_id = 3;
  string email = 4;
  int64 status = 5;
  string error = 6;
}

message GetUsersRequest{
  int32 limit = 1;
  int32 offset = 2;
}

message GetUsersResponse{
  repeated GetUserResponse users = 1;
  int64 status = 2;
  string error = 3;
}

message UpdateUserRequest{
  int64 id = 1;
  int64 role_id = 2;
  string email = 3;
  string password = 4;
  optional string imageUrl = 5;
}

message UpdateUserResponse{
  int64 status = 1;
  string error = 2;
}

message DeleteUserRequest{
  int64 id = 1;
}

message DeleteUserResponse{
  int64 status = 1;
  string error = 2;
}
