syntax = "proto3";

package pb;

option go_package= "github.com/EdoRguez/business-manager/gateway/product/pb";

service ProductService{
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}

message CreateProductRequest{
  int64 companyId = 1;
  string name = 2;
  optional string description = 3;
  optional string sku = 4;
  uint64 price = 5;
}

message CreateProductResponse{
  string id = 1;
  int64 status = 2;
  string error = 3;
}
